# drf-cached-view

./: README.md  setup.cfg
drf_cached_view/: cache.py  mixins.py  models.py  settings.py
drf_cached_view/rest_framework/: viewsets.py
