[metadata]
name = drf-cached-view
version = 0.1.0
url = https://github.com/ZhaoQi99/drf-cached-view
project_urls = 
    Homepage = https://github.com/ZhaoQi99/drf-cached-view
    Changelog = https://github.com/ZhaoQi99/drf-cached-view/releases
    Source = https://github.com/ZhaoQi99/drf-cached-view
    Issue Tracker = https://github.com/ZhaoQi99/drf-cached-view/issues
author = Qi Zhao
author_email = zhaoqi99@outlook.com
# "Trove classifiers" for PyPI (https://pypi.org/classifiers/).
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Django :: 2
    Framework :: Django :: 3
    Framework :: Django :: 4
    Programming Language :: Python :: Implementation :: CPython
license_files = LICENSE
description = Cache view for django-rest-framework.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django-rest-framework,django,django-cache,drf

[options]
install_requires = 
    Django >= 2.0
    djangorestframework
python_requires = >=3.6
packages = find:
# package_dir =
#     = src

[options.packages.find]
# where = src
exclude =
    tests
    *.tests.*
